fix padding on classroom format on small/mid size screens

--- a/theme/kommit/less/theme/responsive.less
+++ b/theme/kommit/less/theme/responsive.less
@@ -88,15 +88,6 @@
     .breadcrumb > li:last-child {
         display: inline-block;
     }
-
-    // responsive fix for nett course format
-    .format-netcourse #page-content {
-        padding-left: 20px;
-        padding-right: 20px;
-        margin-left: -20px;
-        margin-right: -20px;
-    }
-
 }
 
 // Mid size screen
@@ -104,8 +95,7 @@
 
 @media (max-width: 767px) {
     .top-border {
-        margin-left: -20px;
-        margin-right: -20px;
+        margin: 0 -20px;
     }
 
     .header-right {
@@ -113,13 +103,11 @@
     }
 
     .navbar .navbar-fixed-top {
-        margin-left: -20px;
-        margin-right: -20px;
+        margin: 0 -20px;
     }
 
     .hero-unit {
-        margin-left: -20px;
-        margin-right: -20px;
+        margin: 0 -20px;
         .texts {
             margin-top: 5%;
         }
@@ -146,10 +134,14 @@
 
     // nett course responsive fixes
     .format-netcourse #page-content {
-        padding-left: 10px;
-        padding-right: 10px;
-        margin-left: -10px;
-        margin-right: -10px;
+        padding: 0 10px;
+        margin: 0 -10px;
+    }
+
+    // responsive fix for classroom course format
+    .format-classroom #page-content {
+        padding: 0 10px;
+        margin: 0 -10px;
     }
 
     // adjust height of featured courses
@@ -298,7 +290,6 @@
     // footer adjustments
     // -------------------------------------
     #page-footer {
-
     }
 
     #page-footer #page-footer-inner .column {
